fix: incorrect font-stretch value since removing font

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -77,7 +77,6 @@ h5 {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-weight: 800;
-  font-stretch: 90%;
   margin: 3rem 0 1.38rem;
   line-height: 1.3;
   color: map-get(map-get($palette, header), light);
